made footer same as background color to avoid bad contrast on index page

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: white;
+  background: #F3EEE9;
   display: flex;
   align-items: center;
   justify-content: space-between;
